--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
     <init-param>
       <param-name>contextConfigLocation</param-name>
       <param-value>
-	com.shekhar.notebook.config.ApplicationConfig
+	com.shekhar.notebook.config.ApplicationContextConfig
       </param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
