output location changed to deployments

--- a/pom.xml
+++ b/pom.xml
@@ -294,7 +294,7 @@
 						<version>2.3</version>
 						<configuration>
 							<failOnMissingWebXml>false</failOnMissingWebXml>
-							<outputDirectory>webapps</outputDirectory>
+							<outputDirectory>deployments</outputDirectory>
 							<warName>ROOT</warName>
 						</configuration>
 					</plugin>
